WebGitNet/Content/browse.css
.page-section
{
    margin : 2em 0;
}

.commit-subject, .commit-body
{
    white-space : pre-wrap;
}

.commit-body
{
    margin-top: 1em;
}

.log-entry
{
    position : relative;

    background: #E8EEF4;
    border: solid 1px #696969;
    margin: 4px 0;
    padding: 1em;

    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.commit-person
{
    position: relative;
    margin-top: 1em;
}

.commit-person .avatar
{
    position: absolute;
    left: 0;
    top: 5px;
}

.commit-person .name, .commit-person .date
{
    margin-left: 30px;
}

.commit-references
{
    float: right;

    text-align: right;
    font-family: Consolas, Monospace;
}

.diff-container
{
    background: #F4EEE8;
    border: 1px solid black;
    overflow: auto;
    padding: 1em;

    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.diff
{
    font-family: Consolas, Monospace;
}

.diff-line
{
    white-space: pre;
}

.clone-info input 
{
    width : 600px;
}

.blob-preview
{
    margin: 1em 0;
    border: 1px solid black;
}

.preview-header
{
    position: relative;
    background: #EEE;
    padding: 8px;
}

.blob-content-type
{
}

.blob-raw-version-link
{
    position: absolute;
    right: 8px;
    top: 8px;
}

.preview-contents
{
    text-align: center;
    background: #888;
    padding: 8px;
    overflow: auto;
}

.preview-unavailable
{
    color: #fff;
}

.text-preview table
{
    width: 100%;
    background: white;
    border: none;
    font-family: Consolas, Monospace;
}

.text-preview td
{
    border: none;
}

td.line-numbers
{
    text-align: right;
    width: 0;
    white-space: nowrap;
}

td.text-lines
{
    text-align: left;
}

.text-line
{
    white-space: pre;
}

.image-preview
{
    border: 1px solid black;
    display: inline-block;
    background: url(checkerboard.png);
    background-repeat: repeat;
}

.image-preview img
{
    vertical-align: top;
    border: 1px solid white;
}

